--- a/app/views/privatemonitoring/nearbyevents.scala.html
+++ b/app/views/privatemonitoring/nearbyevents.scala.html
@@ -103,11 +103,19 @@ Copyright 2013 Anthony Christe
       </table>
     </div>
     <div class="pull-right">
+    @defining(
+      if(session.get("nearbyEventsAfterAmount") == null) {
+        0L
+      } else {
+        Long.parseLong(session.get("nearbyEventsAfterAmount"))
+      }
+    ) { afterTimestamp =>
       @if(page > 0) {
-        <a href="@routes.Events.nearbyEventsByPage(deviceId, page - 1)" class="btn btn-primary"><- Prev.</a>
+        <a href="@routes.Events.nearbyEventsByPage(deviceId, page - 1, afterTimestamp)" class="btn btn-primary"><- Prev.</a>
       }
       [@(page + 1)/@(pages + 1)]
-      <a href="@routes.Events.nearbyEventsByPage(deviceId, page + 1)" class="btn btn-primary"> Next. -></a>
+    <a href="@routes.Events.nearbyEventsByPage(deviceId, page + 1, afterTimestamp)" class="btn btn-primary"> Next. -></a>
+    }
     </div>
   </div>
 }
