Added new view and controller method for detailed alert administration. #31

--- a/app/views/admin/adminalert.scala.html
+++ b/app/views/admin/adminalert.scala.html
@@ -74,7 +74,7 @@ Copyright 2013 Anthony Christe
                <td>@booleanToHuman(device.getAlerts.get(0).getAlertViaEmail)</td>
                <td>@booleanToHuman(device.getAlerts.get(0).getAlertViaSms)</td>
              }
-             <td><a href="#" class="btn btn-warning">Update</a></td>
+             <td><a href="@routes.Administration.alertDetails(device.getDeviceId)" class="btn btn-warning">Update</a></td>
            </tr>
          }
       </tbody>
