Fixed size of text fields

--- a/app/views/admin/admindevice.scala.html
+++ b/app/views/admin/admindevice.scala.html
@@ -52,7 +52,7 @@ Copyright 2013 Anthony Christe
               <td>@inputText(deviceForm("deviceId"), '_showConstraints -> false, '_label -> "", 'readonly -> "readonly",
                 'class -> "input-medium")</td>
               <td>@inputText(deviceForm("description"), '_showConstraints -> false, '_label -> "",
-                'class -> "input-small")</td>
+                'class -> "")</td>
               <td>
                 <input type="submit" class="btn btn-warning pull-right" value="Update">
               </td>
@@ -74,7 +74,7 @@ Copyright 2013 Anthony Christe
                 '_label -> "",
                 'placeholder -> "Office",
                 '_showConstraints -> false,
-                'class -> "input-small",
+                'class -> "",
                 'id -> "deviceDescription")
               </td>
               <input type="hidden" name="sharingData" id="sharingData" value="false" />
