--- a/app/views/admin/admindevice.scala.html
+++ b/app/views/admin/admindevice.scala.html
@@ -89,7 +89,7 @@ Copyright 2013 Anthony Christe
     <div class="span2 well well-small">
       <p>
         <b>Register new OPQ device</b>
-        <br> The device ID is a squence of 16 characters and letters that should have
+        <br> The device ID is a sequence of 16 characters and letters that should have
         been supplied with your OPQ device.
       </p>
       <p>
