--- a/app/views/admin/updatedatashare.scala.html
+++ b/app/views/admin/updatedatashare.scala.html
@@ -84,7 +84,7 @@ Copyright 2013 Anthony Christe
     </table>
   </div>
   @*
-  Start of cdsi map
+  Start of data sharing map
   *@
   <script src="@routes.Assets.at("javascripts/leaflet.js")" type="text/javascript"></script>
   <script src="@routes.Assets.at("javascripts/grid-map.js")" type="text/javascript"></script>
