--- a/app/views/publicpowerqualitymonitoring.scala.html
+++ b/app/views/publicpowerqualitymonitoring.scala.html
@@ -135,7 +135,7 @@ Copyright 2013 Anthony Christe
         function makeTable(vals) {
         var table = "<table id='popup-table'>";
 
-        for(i = 0; i < vals.length; i += 2) {
+        for(var i = 0; i < vals.length; i += 2) {
         table += '<tr><td><b>' + vals[i] + '</b></td><td>' + vals[i + 1] + '</td></tr>';
         }
 
