Implemented single selection mode from grid-map to fix issue #62

--- a/app/views/admin/updatedatashare.scala.html
+++ b/app/views/admin/updatedatashare.scala.html
@@ -107,10 +107,11 @@ Copyright 2013 Anthony Christe
       $('#gridCol').val(feature.properties.col);
     });
 
-    layer.setStyle({fillColor: 'red'});
+    g.colorLayer(layer, "red");
   }
 
   var g = grid ;
+  g.setSingleSelectionMode(true);
   g.setOnGridClickCallback ( onGridClick ) ;
   grid.initMap ( "data-sharing-map", g.island.OAHU.latLng, g.island.OAHU.defaultZoom ) ;
   </script>
