--- a/app/views/wizard/wizard_data_sharing.scala.html
+++ b/app/views/wizard/wizard_data_sharing.scala.html
@@ -76,10 +76,11 @@ Copyright 2013 Anthony Christe
       $('#gridCol').val(feature.properties.col);
     });
 
-    layer.setStyle({fillColor: 'red'});
+    g.colorLayer(layer, "red");
   }
 
   var g = grid;
+  g.setSingleSelectionMode(true);
   g.setOnGridClickCallback(onGridClick);
   g.initMap("wizard-map", g.island.OAHU.latLng, g.island.OAHU.defaultZoom);
 
