--- a/app/views/wizard/wizard_data_sharing.scala.html
+++ b/app/views/wizard/wizard_data_sharing.scala.html
@@ -76,12 +76,12 @@ Copyright 2013 Anthony Christe
       $('#gridCol').val(feature.properties.col);
     });
 
-    g.colorLayer(layer, "red");
+    g.coloSquare(feature.properties.id, "red");
   }
 
   var g = grid;
-  g.setSingleSelectionMode(true);
-  g.setOnGridClickCallback(onGridClick);
+  g.config.singleSelectionMode = true;
+  g.callbacks.onGridClick = onGridClick;
   g.initMap("wizard-map", g.island.OAHU.latLng, g.island.OAHU.defaultZoom);
 
   $(document).ready(function() {
