--- a/app/views/publicmonitoring/publicpowerqualitymonitoring.scala.html
+++ b/app/views/publicmonitoring/publicpowerqualitymonitoring.scala.html
@@ -19,6 +19,26 @@ Copyright 2013 Anthony Christe
 @(events: List[models.Event], devices: List[models.OpqDevice], loggedOut: Boolean)
 
 @main("Public Power Quality Monitoring", menu("Public Power Quality Monitoring", loggedOut)) {
+  <div class="row span9">
+    <div class="well well-small">
+      <p>Filter Events</p>
+      <form class="form-inline" action="@routes.Events.filterEvents()" id="filterForm" method="post">
+        <div class="control-group">
+          <label class="control-label" for="pastTimeSelect">After past</label>
+
+          <select id="pastTimeSelect" name="pastTimeSelect">
+          @for(option <- utils.DateUtils.TimeUnit.values()) {
+            @if(option.toString.equals(session.get("pastTimeSelectEvents"))) {
+              <option selected>
+              } else {
+              <option>
+              }
+            @option</option>
+          }
+          </select>
+        </div>
+      </form>
+    </div>
   <div class="row">
     @* Start of public map *@
     <div id="public-map" class="span12"></div>
@@ -61,24 +81,27 @@ Copyright 2013 Anthony Christe
 
       function onMapChange() {
         var visibleIds = g.getVisibleIds();
-        var visibleIdsJson = JSON.stringify({visibleIds: visibleIds});
+        var pastTimeUnits = $("#pastTimeSelect").find(":selected").text( ).trim(" ");
+        var after = getPastDate(pastTimeUnits);
+        var json = JSON.stringify({after: after, visibleIds: visibleIds});
 
         $.ajax({
            type: "POST",
            url: "/public/alerts",
            processData: false,
            contentType: 'application/json',
-           data: visibleIdsJson,
-           success: function(data, status, whoKnowsWhat) {
+           data: json,
+           success: function(data) {
+            g.clearColoredLayers();
              var affectedSquares = data["affectedSquares"];
              for(var i = 0; i < affectedSquares.length; i++) {
                for(k in affectedSquares[i]) {
                  var o = affectedSquares[i][k];
                  g.colorSquare(k, "red");
-                 g.addPopupContent(k, "Total Devices: " + o.totalDevices + "<br />" +
-                                      "Affected Devices: " + o.numAffectedDevices + "<br />" +
-                                      "Frequency Events: " + o.numFrequencyEvents + "<br />" +
-                                      "Voltage Events: " + o.numVoltageEvents);
+                 g.addPopupContent(k, "Total Devices: "     + o.totalDevices        + "<br />" +
+                                      "Affected Devices: "  + o.numAffectedDevices  + "<br />" +
+                                      "Frequency Events: "  + o.numFrequencyEvents  + "<br />" +
+                                      "Voltage Events: "    + o.numVoltageEvents);
                }
              }
 
