--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -37,6 +37,7 @@ Copyright 2013 Anthony Christe
       <link rel="stylesheet" media="screen" href="@routes.Assets.at("fuelux/css/fuelux.css")">
 
       <link rel="stylesheet" media="screen" href="@routes.Assets.at("fuelux/css/fuelux-responsive.css")">
+      <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-datetimepicker.min.css")">
       <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/opq-ao.css")">
 
       <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
