--- a/app/views/publicmonitoring/publicpowerqualitymonitoring.scala.html
+++ b/app/views/publicmonitoring/publicpowerqualitymonitoring.scala.html
@@ -22,34 +22,28 @@ Copyright 2013 Anthony Christe
   <div class="row">
     <div class="row span3">
       <div class="well well-small">
-        <p>Filter events after past time units</p>
         <form class="form-inline" action="@routes.Events.filterEvents()" id="filterForm" method="post">
-          <div class="control-group">
-            <label class="control-label" for="pastTimeSelect">After past</label>
-            <select id="pastTimeSelect" name="pastTimeSelect">
-            @for(option <- utils.DateUtils.TimeUnit.values()) {
-              @if(option.toString.equals(session.get("pastTimeSelectEvents"))) {
-                <option selected>
-                } else {
-                <option>
-                }
-              @option</option>
-            }
-            </select>
-          </div>
           <br />
-          <p>Filter events with custom time range</p>
-          <div class="control-group">
-            <label class="control-label" for="timeRangeAfter">Events after</label>
-            <input type="text" name="timeRangeAfter" id="timeRangeAfter">
+          <p>Filter events after...</p>
+          <div id="after" class="input-append date">
+            <input id="afterField" data-format="MM/dd/yyyy hh:mm:ss" type="text"></input>
+            <span class="add-on">
+              <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+              </i>
+            </span>
           </div>
-          <div class="control-group">
-            <label class="control-label" for="timeRangeBefore">Events before</label>
-            <input type="text" name="timeRangeBefore" id="timeRangeBefore">
+          <p>Filter events before...</p>
+          <div id="before" class="input-append date">
+            <input id="beforeField" data-format="MM/dd/yyyy hh:mm:ss" type="text"></input>
+            <span class="add-on">
+              <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+              </i>
+            </span>
           </div>
         </form>
       </div>
-  </div>
+    </div>
+
     <div class="row span9">
       @* Start of public map *@
       <div id="public-map" class="span9">
@@ -74,14 +68,26 @@ Copyright 2013 Anthony Christe
           </table>
         </div>
       </div>
-
-
   </div>
 
     <script src="@routes.Assets.at("javascripts/leaflet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/grid-map.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
 
     <script type="text/javascript">
+      /* Set up date-time pickers */
+      $(function() {
+        $('#after').datetimepicker({
+          language: 'en',
+          pick12HourFormat: true
+        });
+        $('#before').datetimepicker({
+          language: 'en',
+          pick12HourFormat: true
+        });
+      });
+
+
       /* Make sure the leaflet CSS is loaded */
       addDynamicCss ('@routes.Assets.at("stylesheets/leaflet.css")');
 
@@ -91,13 +97,37 @@ Copyright 2013 Anthony Christe
         }
       }
 
-      $("#pastTimeSelect").change(onMapChange);
+
+      $('#afterField' ).change(function(){
+         onMapChange();
+      });
+
+      $('#BeforeField' ).change(function(){
+        onMapChange();
+      });
 
       function onMapChange() {
         var visibleIds = g.getVisibleIds();
-        var pastTimeUnits = $("#pastTimeSelect").find(":selected").text( ).trim(" ");
-        var after = getPastDate(pastTimeUnits);
-        var json = JSON.stringify({after: after, visibleIds: visibleIds});
+        var afterField = $('#afterField').val();
+        var beforeField = $('#beforeField').val();
+        var afterMillis;
+        var beforeMillis;
+
+        if(afterField === "") {
+          afterMillis = 0;
+        }
+        else {
+          afterMillis = new Date(afterField).getTime();
+        }
+
+        if(beforeField === "") {
+          beforeMillis = new Date().getTime();
+        }
+        else {
+          beforeMillis = new Date(beforeField).getTime();
+        }
+
+        var json = JSON.stringify({after: afterMillis, before: beforeMillis, visibleIds: visibleIds});
 
         $.ajax({
            type: "POST",
