--- a/app/views/privatemonitoring/eventdetails.scala.html
+++ b/app/views/privatemonitoring/eventdetails.scala.html
@@ -86,6 +86,7 @@ Copyright 2013 Anthony Christe
 
   </div>
   <script src="@routes.Assets.at("javascripts/flot/jquery.flot.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.at("javascripts/flot/jquery.flot.navigate.js")" type="text/javascript"></script>
   <script type="text/javascript">
     var t = @Html(Json.obj(
               "data" -> rawPowerData
@@ -107,8 +108,15 @@ Copyright 2013 Anthony Christe
       },
       xaxis: {
         tickFormatter: function(val, axis) { return val < axis.max ? val.toFixed(2) : "Samples";}
+      },
+      zoom: {
+        interactive: true
+      },
+      pan: {
+        interactive: true
       }
     };
+
 
     $.plot($("#plotter"), points, plotOptions);
 
