included plotting lib

--- a/app/views/privatemonitoring/eventdetails.scala.html
+++ b/app/views/privatemonitoring/eventdetails.scala.html
@@ -118,7 +118,11 @@ Copyright 2013 Anthony Christe
       }],
       yaxes: [{
         axisLabel: "Voltage"
-      }]
+      }],
+    series: {
+    lines: { show: true },
+    points: { show: false }
+    }
     };
 
 
