--- a/app/views/privatemonitoring/eventdetails.scala.html
+++ b/app/views/privatemonitoring/eventdetails.scala.html
@@ -81,16 +81,20 @@ Copyright 2013 Anthony Christe
     }
 
   </div>
+
+  <!-- ITIC Curve - Should only be displayed on voltage events -->
+  @if(event.getEventType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.EVENT_VOLTAGE)) {
+    <div class="row">
+      <div id="itic-plot" class="span9 pull-right" style="width:950px;height:400px">
+      </div>
+    </div>
+  }
+
+  <!-- Raw RMS voltage -->
   <div class="row">
-    <div id="itic-plot" class="span9 pull-right" style="width:950px;height:400px">
+    <div class="span9 pull-right" id="plotter" style="height:400px; width:950px">
     </div>
   </div>
-  <div class="row">
-    <div class="span9 pull-right" id="plotter" style="height:400px; width:950px"></div>
-    </div>
-  </div>
-
-
 
 
   <script src="@routes.Assets.at("javascripts/flot/jquery.flot.js")" type="text/javascript"></script>
@@ -98,7 +102,7 @@ Copyright 2013 Anthony Christe
   <script src="@routes.Assets.at("javascripts/flot/jquery.flot.axislabels.js")" type="text/javascript"></script>
   <script src="@routes.Assets.at("javascripts/itic-plotter.js")" type="text/javascript"></script>
   <script type="text/javascript">
-    var p = iticPlotter;
+
     var t = @Html(Json.obj(
               "data" -> rawPowerData
             ).toString());
@@ -136,37 +140,41 @@ Copyright 2013 Anthony Christe
     };
 
     $.plot($("#plotter"), points, plotOptions);
-    p.init("#itic-plot");
-
-    p.addPoint(@event.getEventDuration, p.voltageToPercentNominalVoltage(@event.getEventValue));
 
 
-  $("<div id='tooltip'></div>").css({
-  position: "absolute",
-  display: "none",
-  border: "1px solid #fdd",
-  padding: "2px",
-  "background-color": "#fee",
-  opacity: 0.80
-  }).appendTo("body");
+    @if(event.getEventType.equals(org.openpowerquality.protocol.OpqPacket.PacketType.EVENT_VOLTAGE)) {
+      var p = iticPlotter;
+      p.init("#itic-plot");
+      p.addPoint(@event.getEventDuration, p.voltageToPercentNominalVoltage(@event.getEventValue));
 
-  $("#itic-plot").bind("plothover", function (event, pos, item) {
-  if (item) {
-  var duration = item.datapoint[0].toFixed(2);
-  var percentNominalVoltage = item.datapoint[1].toFixed(2);
+      $("<div id='tooltip'></div>").css({
+      position: "absolute",
+      display: "none",
+      border: "1px solid #fdd",
+      padding: "2px",
+      "background-color": "#fee",
+      opacity: 0.80
+      }).appendTo("body");
 
-  $("#tooltip").html(p.formatTooltip([["Duration (ms)", duration],
-  ["Duration (c)", p.msToC(duration).toFixed(2)],
-  ["% nominal voltage", percentNominalVoltage],
-  ["+/- volts", p.percentNominalVoltageToVoltage(percentNominalVoltage)],
-  ["ITIC Region", item.series.label]]))
-  .css({top: item.pageY+5, left: item.pageX+5})
-  .fadeIn(200);
-  } else {
-  $("#tooltip").hide();
-  }
-  });
+      $("#itic-plot").bind("plothover", function (event, pos, item) {
+      if (item) {
+      var duration = item.datapoint[0].toFixed(2);
+      var percentNominalVoltage = item.datapoint[1].toFixed(2);
 
-    p.update();
+      $("#tooltip").html(p.formatTooltip([["Duration (ms)", duration],
+      ["Duration (c)", p.msToC(duration).toFixed(2)],
+      ["% nominal voltage", percentNominalVoltage],
+      ["+/- volts", p.percentNominalVoltageToVoltage(percentNominalVoltage)],
+      ["ITIC Region", item.series.label]]))
+      .css({top: item.pageY+5, left: item.pageX+5})
+      .fadeIn(200);
+      } else {
+      $("#tooltip").hide();
+      }
+      });
+
+      p.update();
+    }
+
   </script>
 }
