--- a/app/views/publicmonitoring/publicpowerqualitymonitoring.scala.html
+++ b/app/views/publicmonitoring/publicpowerqualitymonitoring.scala.html
@@ -69,11 +69,11 @@ Copyright 2013 Anthony Christe
         </div>
       </div>
   </div>
-    @*
+
     <div class="row span9">
-      <div id="itic-plot" style="width:1000px;height:600px"></div>
+      <div id="itic-plot" style="width:900px;height:400px"></div>
     </div>
-    *@
+
 
     <script src="@routes.Assets.at("javascripts/leaflet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/grid-map.js")" type="text/javascript"></script>
@@ -83,7 +83,35 @@ Copyright 2013 Anthony Christe
     <script src="@routes.Assets.at("javascripts/itic-plotter.js")" type="text/javascript"></script>
 
     <script type="text/javascript">
-      //p = iticPlotter;
+      p = iticPlotter;
+      // Set up plot
+      p.init("#itic-plot");
+
+      $("<div id='tooltip'></div>").css({
+      position: "absolute",
+      display: "none",
+      border: "1px solid #fdd",
+      padding: "2px",
+      "background-color": "#fee",
+      opacity: 0.80
+      }).appendTo("body");
+
+      $("#itic-plot").bind("plothover", function (event, pos, item) {
+      if (item) {
+      var duration = item.datapoint[0].toFixed(2);
+      var percentNominalVoltage = item.datapoint[1].toFixed(2);
+
+      $("#tooltip").html(p.formatTooltip([["Duration (ms)", duration],
+      ["Duration (c)", p.msToC(duration).toFixed(2)],
+      ["% nominal voltage", percentNominalVoltage],
+      ["+/- volts", p.percentNominalVoltageToVoltage(percentNominalVoltage)],
+      ["ITIC Region", item.series.label]]))
+      .css({top: item.pageY+5, left: item.pageX+5})
+      .fadeIn(200);
+      } else {
+      $("#tooltip").hide();
+      }
+      });
 
       /* Set up date-time pickers */
       $(function() {
@@ -147,17 +175,26 @@ Copyright 2013 Anthony Christe
            data: json,
            success: function(data) {
             g.clearColoredLayers();
+            p.removePoints();
              var affectedSquares = data["affectedSquares"];
              for(var i = 0; i < affectedSquares.length; i++) {
-               for(k in affectedSquares[i]) {
+               for(var k in affectedSquares[i]) {
                  var o = affectedSquares[i][k];
                  g.colorSquare(k, "red");
                  g.addPopupContent(k, "Total Devices: "     + o.totalDevices        + "<br />" +
                                       "Affected Devices: "  + o.numAffectedDevices  + "<br />" +
                                       "Frequency Events: "  + o.numFrequencyEvents  + "<br />" +
-                                      "Voltage Events: "    + o.numVoltageEvents);
+                                      "Voltage Events: "    + o.numVoltageEvents  + "<br />");
+
+                 // Populate the plot
+                 var points = o.iticPoints;
+                 for(var j = 0; j < points.length; j++) {
+                  p.addPoint(points[j][0], p.voltageToPercentNominalVoltage(points[j][1]));
+                 }
                }
              }
+
+           p.update();
 
              var globalState = data["globalState"];
              $("#totalDevices").text(globalState["totalDevices"]);
@@ -175,8 +212,7 @@ Copyright 2013 Anthony Christe
       g.callbacks.onMapChange = onMapChange;
       g.initMap ("public-map", g.island.OAHU.latLng, g.island.OAHU.defaultZoom);
 
-      // Set up plot
-      //p.init("#itic-plot");
+
     </script>
   </div>
 }
